--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -3,6 +3,9 @@
     font-family: 'Dancing Script', sans-serif ;
     font-size: 38px ;
   }
+  ul{
+  	font-family: 'Raleway', sans-serif;
+  }
 </style>
 
 <div class="row">
