--- a/public/views/billing/new.html
+++ b/public/views/billing/new.html
@@ -2,6 +2,32 @@
 	body{
 		font-family: 'Raleway',sans-serif;
 	}
+
+	table{
+		font-family: 'Montserrat',sans-serif;
+		cursor: default;
+	}
+	table th:hover{
+		cursor: default;
+	}
+	.list tr:hover{
+		text-decoration: none;
+		cursor: pointer;
+	}
+
+	.bs1{
+		position: relative; 
+		bottom:20px; 
+		right:48px; 
+		float: right; 
+		width:180px; 
+	}
+	.bs2{
+		position: relative; 
+		bottom:20px; 
+		left:635px; 
+		width:180px; 
+	}
 	.tabs li:hover a:hover{
 		text-decoration: none ;
 		cursor: pointer;
@@ -41,13 +67,14 @@
 			<br>
 			<b> CONTACT NUMBER </b><span style="position: absolute; float: right; right: 645px">{{customerData.contact}}</span>
 			<br>
-			<span style="position: absolute; float: right; right:220px; top:226px"><b> ORDER NUMBER </b></span>
-			<span style="position: absolute; float: right; right:60px; top:226px">{{orderId}}</span>
-			<span style="position: absolute; float: right; right:220px; top:248px"><b> PICKUP DATE  </b></span>
-			<span style="position: absolute; float: right; right:60px; top:248px">{{dateData.pickupDate | date:"dd MMMM, yyyy"}}</span>
-			<span style="position: absolute; float: right; right:220px; top:270px"><b> RETURN DATE  </b></span>
-			<span style="position: absolute; float: right; right:60px; top:270px">{{dateData.returnDate | date:"dd MMMM, yyyy"}}</span>
-
+			<span ng-show="loss != 1">
+				<span style="position: absolute; float: right; right:220px; top:226px"><b> ORDER NUMBER </b></span>
+				<span style="position: absolute; float: right; right:60px; top:226px">{{orderId}}</span>
+				<span style="position: absolute; float: right; right:220px; top:248px"><b> PICKUP DATE  </b></span>
+				<span style="position: absolute; float: right; right:60px; top:248px">{{dateData.pickupDate | date:"dd MMMM, yyyy"}}</span>
+				<span style="position: absolute; float: right; right:220px; top:270px"><b> RETURN DATE  </b></span>
+				<span style="position: absolute; float: right; right:60px; top:270px">{{dateData.returnDate | date:"dd MMMM, yyyy"}}</span>
+			</span>
 			<br><br>
 			<div style="font-size: 20px">
 				<span style="position: relative; float: right; right:199px;"><b> BILL AMOUNT </b></span>
@@ -86,10 +113,14 @@
       </div>
 
             <div class="card-action" style="height:50px">
-            	<span style="float:right">
-					<button style="position: relative; bottom: 10px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" data-target="cancelConfirm"><font size="4"><i class="fa fa-ban"></i> CANCEL ORDER </font></button>
-					<button style="position: relative; bottom: 10px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" data-target="saveBillConfirm"><font size="4" > SAVE BILL <i class="fa fa-floppy-o"></i></font></button>
+            	<span style="float:right" ng-show="loss != 1">
+					<button style="position: relative; bottom: 10px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="cancelBtn" ng-model="cancelBtn" data-target="cancelConfirm"><font size="4"><i class="fa fa-ban"></i> CANCEL ORDER </font></button>
+					<button style="position: relative; bottom: 10px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="saveBillBtn" ng-model="saveBillBtn" data-target="saveBillConfirm"><font size="4" > SAVE BILL <i class="fa fa-floppy-o"></i></font></button>
               	</span>
+            	<span style="float:right" ng-show="loss === 1">
+					<button style="position: relative; bottom: 10px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="cancelBtn" ng-model="cancelBtn" data-target="cancelConfirm"><font size="4"><i class="fa fa-ban"></i> CANCEL </font></button>
+					<button style="position: relative; bottom: 10px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="saveBillBtn" ng-model="saveBillBtn" data-target="saveLostBillConfirm"><font size="4" > SAVE BILL &amp; UPDATE STOCKS <i class="fa fa-floppy-o"></i></font></button>
+              	</span>              	
             </div>
 
     </div>
@@ -106,6 +137,17 @@
 	</div>
 </div>
 
+<div id="saveLostBillConfirm" class="modal bottom-sheet">
+	<div class="modal-content">
+		<center><h4>ARE YOU SURE TO SAVE THIS BILL &amp; UPDATE THE STOCKS ?</h4>
+		<p>!! NO MORE CHANGES CAN BE MADE !!</p>
+		</center>
+		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="saveLostBill()"> YES </button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="no()"> NO </button></center>
+	</div>
+</div>
+
 <div id="cancelConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4>ARE YOU SURE TO CANCEL THIS ORDER ?</h4></center>
@@ -115,6 +157,130 @@
 	</div>
 </div>
 
-  <div ng-show="!showBill">
-  	WE ARE WORKING ON THIS ... 
-  </div>
+
+
+
+
+
+
+<div ng-show="!showBill">
+	<div ng-show="content===1">
+		<h4>GENERATE BILL ON ACCOUNT OF :</h4>
+		<br>
+		<input name="purpose" type="radio" id="opt1" checked="true" />
+		<label for="opt1"><font size="4" color="brown"> LOSS / DAMAGE OF STOCK </font></label>
+		<span style="position: absolute; bottom:35px ; float: right; right:48px">
+			<button class="waves-effect waves-light btn-large" type="submit" id="proceedBtn" ng-model="proceedBtn" ng-click="proceed()" ><font size="4" > PROCEED <i class="fa fa-chevron-right"></i> </font></button>
+		</span>
+	</div>
+
+
+	<div ng-show="content===2">
+		<h4 style="font-family: 'Montserrat', sans-serif;"> {{titleMsg}} </h4> 
+		  <div class="input-field animated" style="position: absolute; top:120px; right:65px; float: right; width:300px;" id="searchContainer">
+		  <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
+		    <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-init="" ng-focus="searchFocus()" ng-blur="compressSearch()" id="search" style="width: 0px">
+		  </div> 
+
+		<table class="table table-hover table-responsive list animated" id="custList">
+		  <thead>
+		  <!-- <tr> -->
+		      <th width ="35%"><i class="fa fa-user-o" style="font-size: 15px"></i> NAME</th>
+		      <th width ="25%"><i class="fa fa-phone" style="font-size: 15px"></i> CONTACT NUMBER</th>
+		      <th width ="20%"><center><i class="fa fa-cube" style="font-size: 15px"></i> OUTSTANDING ORDERS</center></th>
+		      <th width ="20%"><center><i class="fa fa-inr" style="font-size: 15px"></i> CREDIT</center></th>
+		  <!-- </tr> -->
+		  </thead>
+			<tr ng-repeat="customer in list | filter : search" ng-click="set(customer,$index)" id="row{{$index}}" height="48">
+		    <td width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
+		    <td width="25%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
+		    <td width="20%" title = "Orders"> <center>{{customer.orders}}</center> </td>	
+		    <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
+			</tr>
+		</table>
+	</div>
+
+	<div ng-show="content==3">
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">CUSTOMER DETAILS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-code"></i>&nbsp;&nbsp;{{billNo}} </span>
+					<span style="position: absolute; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 22%"><i class="fa fa-user-o" style="font-size: 15px"></i> {{customer.name}}</span>
+					<span style="position: absolute; right:700px;"><i class="fa fa-phone" style="font-size: 15px"></i> {{customer.contact}}</span>
+					<br>
+			</div>
+		</div>
+
+		<b> LOST STOCK LIST </b>
+		<br>
+		<span ng-show="lostList.length == 0">NO ITEMS ADDED YET
+		<br><br>
+		</span>
+
+		<table class="table table-hover table-responsive list animated" id="orderedItemList" ng-show="lostList.length > 0">
+		  <thead>
+		  <!-- <tr> -->
+		      <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
+		      <th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
+		      <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
+		      <th width ="12.50%"><center><i class="fa fa-cubes" style="font-size: 20px"></i> QUANTITY LOST</center></th>
+		      <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> TOTAL</center></th>
+		  <!-- </tr> -->
+		  </thead>
+		  <tbody>
+		    <tr ng-repeat="lostItem in lostList" class="animated fadeInLeft" height="48" id="item{{$index}}">
+		    <td width="20%" title = "CODE"> {{lostItem.barCode}} </td>
+		    <td width="30%" title = "NAME" style="position:relative; left:10px">  {{lostItem.name}} </td>
+		    <td width="12.50%" title = "PRICE"> <center>{{lostItem.price | currency:""}} ₹</center> </td>
+		    <td width="12.50%" title = "LOST STOCK"> <center>{{lostItem.qty}}</center> </td>
+		    <td width="12.50%" title = "AVAILABLE"> <center>{{lostItem.price*lostItem.qty | currency:""}} ₹</center> </td>
+		    <td width="12.50%" title = "AVAILABLE"> <center><button class="btn waves-effect waves-light" style="background-color: #d32f2f; position: relative; bottom: 2px" ng-click="delThisItem($index)"><i class="fa fa-trash-o"></i></button></center> </td>
+		  	</tr>
+		  </tbody>
+		</table>
+				<button ng-class="{'bs1': lostList.length == 0 , 'bs2' : lostList.length > 0}" class="waves-effect waves-light btn-large" id="backBtn" ng-model="backBtn" ng-click="back(1)" ><font size="4" ><i class="fa fa-chevron-left"></i> BACK</font></button>
+
+				<button style="position: relative; bottom:20px; right:48px; float: right; width:180px; background-color: #757575" class="waves-effect waves-light btn-large" type="submit" id="checkoutBtn" ng-model="checkoutBtn" ng-click="generate()" ng-show="lostList.length > 0"><font size="4" > GENERATE BILL <i class="fa fa-check"></i> </font></button>
+
+		<br>
+
+		<!-- </ul> -->
+		<b> ALL ITEMS LIST </b>
+		<table class="table table-hover table-responsive list animated" style="position: relative; bottom: 15px" id="itemList">
+		  <thead>
+		  <!-- <tr> -->
+		      <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
+		      <th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
+		      <th width ="25%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
+		      <th width ="25%"><center><i class="fa fa-stack-overflow" style="font-size: 20px"></i> TOTAL STOCK</center></th>
+		  <!-- </tr> -->
+		  </thead>
+		  <tbody>
+		    <tr ng-repeat="item in itemList | filter : search" ng-click="setItem(item,$index)" id="row2{{$index}}" height="48">
+		    <td width="20%" id="{{item.barCode}}" title = "CODE"> {{item.barCode}} </td>
+		    <td width="30%" id="{{item.barCode}}" title = "NAME" style="position:relative; left:10px">  {{item.name}} </td>
+		    <td width="25%" id="{{item.barCode}}" title = "PRICE"> <center>{{item.price | currency:""}} ₹</center> </td>
+		    <td width="25%" id="{{item.barCode}}" title = "TOTAL STOCK"> <center>{{item.totalStock}}</center> </td>
+		  	</tr>
+		  </tbody>
+		</table>
+
+	</div>
+</div>
+
+</div>
+
+
+<div id="lostItemConfirm" class="modal bottom-sheet">
+	<div class="modal-content">
+		<center><h4><i class="fa fa-cubes" id="qtyIcon"></i> ENTER THE LOST QUANTITY FOR <b>{{item.name}}</b> 
+  		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
+    		<input type="number" ng-model="qty" ng-keydown="tap(enrollItem())" id="qtySearch" ng-init="qty=1" min="1" max="{{item.availableStock}}" style="font-size: 20px; width: 50px">
+  		</div> 
+  		<form style="display: inline-block;">
+		<button class="btn waves-effect waves-light" style="background-color: #388E3C" type="submit" name="sbm" ng-click="enrollItem()"><i class="fa fa-check"></i></button>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="cancelItem()"><i class="fa fa-times"></i></button>
+		</form>
+		</h4></center>
+	</div>
+</div>
