--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -63,7 +63,8 @@
 		<div style="font-size: 17px">
 			<span style="position: absolute; top: 55px; left:25px;"><i class="fa fa-barcode" style="font-size: 20px"></i> {{item.barCode}}</span>
 			<span style="position: absolute; top: 55px; left:300px;"><i class="fa fa-cube" style="font-size: 23px"></i> {{item.name}}</span>
-			<span style="position: absolute; top: 55px; left:675px;"><i class="fa fa-inr" style="font-size: 23px"></i> <span style="position: relative ; bottom : 5px">{{item.price}}</span></span>
+			<span style="position: absolute; top: 55px; left:675px;"><b><font size="5">R</font></b> <i class="fa fa-inr" style="font-size: 23px"></i> <span style="position: relative ; bottom : 5px">{{item.price}}</span></span>
+			<span style="position: absolute; top: 55px; left:800px;"><b><font size="5">C</font></b> <i class="fa fa-inr" style="font-size: 23px"></i> <span style="position: relative ; bottom : 5px">{{item.costPrice}}</span></span>
 			<span style="position: absolute; top: 55px; left:1000px;"><i class="fa fa-stack-overflow" style="position: relative; bottom: 5px; font-size: 28px"></i><span style="position: relative ; bottom : 5px"> {{item.totalStock}}</span></span>
 			<span style="position: absolute; top: 55px; left:1100px;"><i class="fa fa-inr" style="font-size: 23px"></i> <span style="position: relative ; bottom : 5px">{{item.rentedStock}}</span></span>
 			<span style="position: absolute; top: 55px; left:1200px;"><i class="fa fa-check" style="font-size: 23px"></i> <span style="position: relative ; bottom : 5px">{{item.availableStock}}</span></span>
