Removed Internet Dependency for Fonts and Sort Customers and Bills

--- a/public/views/dashPage.html
+++ b/public/views/dashPage.html
@@ -1,7 +1,9 @@
-<div>
-	DASHBOARD
-	<br>
-	<h3 class="animated bounce">{{name}}</h3>
-	<br>
-	<a ui-sref="logout">LOGOUT</a>
+<style type="text/css">
+	.dash{
+		font-family: 'Artifika', serif ;
+	}
+</style>
+
+<div class="dash">
+<h2 style="position: absolute;"> DASHBOARD </h2>
 </div>
