--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -87,7 +87,7 @@
 			<i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp; ORDER PLACED ON <input type="date" class="datepicker" pick-a-date="todayDate" id="todayDate" name="todayDate" style="width: 250px" disabled>
 		</div>
 		<div class="input-field">
-			<i class="fa fa-truck"></i>&nbsp;&nbsp;&nbsp; PICKUP ON &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" class="datepicker" pick-a-date="pickupDate" id="pickupDate" name="pickupDate" style="width: 250px" required>
+			<i class="fa fa-truck"></i>&nbsp;&nbsp;&nbsp; DELIVER ON &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" class="datepicker" pick-a-date="pickupDate" id="pickupDate" name="pickupDate" style="width: 250px" required>
 		</div>		
 		<div class="input-field">
 			<i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp; RETURN ON &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" class="datepicker" pick-a-date="returnDate" id="returnDate" name="returnDate" style="width: 250px" required>
