--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -13,7 +13,7 @@
 
 <nav>
   <div class="nav-wrapper" id="header">
-    <a href="#"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt" style="position: relative; left:180px;">DECORATIONS</span>
+    <a href="#"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt" style="position: relative; left:180px;">RENTALS &amp; DECORATIONS</span>
     <ul class="right hide-on-med-and-down">   
       <li id="logoutBtn"><a ui-sref="logout"><i class="material-icons">input</i></a></li>
     </ul>
