ADDED LOGIN SESSION TIMEOUTS

--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -33,7 +33,7 @@
         <span id="rectBox"></span>
     </div>
     <div class="col s5" id="loginRightDiv">
-        <center><u>PC RENTSLD &amp; DECORATIONS</u></center>
+        <center><u>PC RENTALS &amp; DECORATIONS</u></center>
         <center><font size="4px">ONE STOP FOR EVENT MANAGEMENT RENTALS</center></font>
     </div>    
 </div>
