--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -154,7 +154,7 @@
       <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
       <th width ="12.50%"><center><i class="fa fa-stack-overflow" style="font-size: 20px"></i> TOTAL STOCK</center></th>
       <th width ="12.50%"><center><i class="fa fa-check" style="font-size: 15px"></i> AVAILABLE NOW</center></th>
-      <th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> AVAILABLE ON {{formattedPickupDate}}</center></th>
+      <th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> AVAILABLE FOR ORDER</center></th>
   <!-- </tr> -->
   </thead>
   <tbody>
