--- a/public/views/orders/view.html
+++ b/public/views/orders/view.html
@@ -23,7 +23,7 @@
 	<br>
 	<div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
 		<i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
-		<input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-init="" id="search" style="width: 0px">
+		<input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-init="" ng-keyup="searchBlur()" id="search" style="width: 0px">
 	</div>
 
 	<table class="table table-hover table-responsive list">
