--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -27,7 +27,7 @@
 <h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL ITEMS IN DATABASE : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
   <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
-    <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-init="" id="search" style="width: 0px">
+    <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-init="" ng-keyup="searchBlur()" id="search" style="width: 0px">
   </div>  
 	<table ng-table="itemTable" class="table table-hover table-responsive list">
   <thead>
